# test_package

./: .gitignore  README.md  setup.cfg
.github/workflows/: publish.yaml  wheels.yaml
src/jcmorin_test_package.egg-info/: PKG-INFO  SOURCES.txt
