[metadata]
name = jcmorin_test_package
version = 0.0.1-dev2
author = Jean-Christophe Morin
author_email = jean_christophe_morin@hotmail.com
description = Test package to test release workflows to PyPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeanChristopheMorinPerso/test_package
project_urls =
    Bug Tracker = https://github.com/JeanChristopheMorinPerso/test_package/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
